# test

./: API.rst  AUTHORS.rst  README.rst  micc3.cfg  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst
test/: __init__.py
tests/: __init__.py
tests/test/: test_test.py
